--- a/html-source/index.html
+++ b/html-source/index.html
@@ -59,21 +59,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/static/images/woman-laptop.jpg" class="d-block w-100" alt="Woman and laptop">
+            <img src="/golang_practice/static/images/woman-laptop.jpg" class="d-block w-100" alt="Woman and laptop">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/static/images/tray.jpg" class="d-block w-100" alt="Tray with coffee">
+            <img src="/golang_practice/static/images/tray.jpg" class="d-block w-100" alt="Tray with coffee">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/static/images/outside.jpg" class="d-block w-100" alt="Outside">
+            <img src="/golang_practice/static/images/outside.jpg" class="d-block w-100" alt="Outside">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
