--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -6,6 +6,7 @@
     <title>My nice page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
     <style>
       .my-footer {
         height: 5em;
@@ -18,8 +19,8 @@
       .room-image {
         max-width: 50%;
       }
-      .redText {
-        color: red;
+      .notie-container {
+        box-shadow: none;
       }
     </style>
   </head>
@@ -111,6 +112,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+    <script src="https://unpkg.com/notie"></script>
     <script>
       console.log("I'm printing my web file.");
      
@@ -133,17 +135,20 @@
       })();
 
       document.getElementById("colorButton").addEventListener("click", function() {
-        let myEl = document.getElementById("myParagraph");
-        if(myEl.classList.contains("redText")) {
-          myEl.classList.remove("redText");
-        } else {
-          myEl.classList.add("redText");
-        }
+        notify("This is my message", "success");
       });
+
       const elem = document.getElementById('reservation-dates');
       const rangepicker = new DateRangePicker(elem, {
         format:"yyyy-mm-dd",
-      }); 
+      });
+
+      function notify(msg,msgType) {
+        notie.alert({
+          type: msgType,// optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+          text: msg,
+        });
+      }
     </script>
   </body>
 </html>
