--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
       .my-footer {
         height: 5em;
@@ -135,7 +136,7 @@
       })();
 
       document.getElementById("colorButton").addEventListener("click", function() {
-        notify("This is my message", "success");
+        notifyModel("title","<em>hello, world</em>","success","My Text for the button.");
       });
 
       const elem = document.getElementById('reservation-dates');
@@ -149,6 +150,16 @@
           text: msg,
         });
       }
+
+      function notifyModel(title, text, icon, confirmButtonText) {
+          Swal.fire({
+          title: title,
+          html: text,
+          icon: icon,
+          confirmButtonText: confirmButtonText
+        });
+      }
+
     </script>
   </body>
 </html>
