--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
       .my-footer {
@@ -22,6 +23,9 @@
       }
       .notie-container {
         box-shadow: none;
+      }
+      .datepicker {
+        z-index: 10000;
       }
     </style>
   </head>
@@ -115,7 +119,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
     <script src="https://unpkg.com/notie"></script>
     <script>
-      console.log("I'm printing my web file.");
+      let attention = Prompt();
      
       (() => {
       'use strict'
@@ -136,7 +140,25 @@
       })();
 
       document.getElementById("colorButton").addEventListener("click", function() {
-        notifyModel("title","<em>hello, world</em>","success","My Text for the button.");
+        // notifyModel("title","<em>hello, world</em>","success","My Text for the button.");
+        let html = `
+         <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+          <div class="row">
+            <div class="col">
+              <div class="row" id="reservation-dates-model">
+                <div class="col">
+                  <input disabled require class="form-control" type="text" name="start" id="start" placeholder="Arrival">
+                </div>
+                <div class="col">
+                  <input disabled require class="form-control" type="text" name="end" id="end" placeholder="Departure">
+                </div>
+              </div>
+            </div>
+          </div>
+
+         </form>
+        `
+        attention.custom({msg: html, title: "Choose your dates"});
       });
 
       const elem = document.getElementById('reservation-dates');
@@ -158,6 +180,102 @@
           icon: icon,
           confirmButtonText: confirmButtonText
         });
+      }
+
+      function Prompt(){
+        let toast = function(c){
+          const {
+            msg = "",
+            icon = "success",
+            position = "top-end",
+          } = c;
+          const Toast = Swal.mixin({
+          toast: true,
+          title: msg,
+          icon: icon,
+          position: "top-end",
+          showConfirmButton: false,
+          timer: 3000,
+          timerProgressBar: true,
+            didOpen: (toast) => {
+              toast.onmouseenter = Swal.stopTimer;
+              toast.onmouseleave = Swal.resumeTimer;
+            }
+          });
+
+          Toast.fire({});
+        }
+
+        let success = function(c){
+          const {
+            msg = "",
+            title = "",
+            footer = "",
+          } = c;
+            Swal.fire({
+              icon: "success",
+              title: title,
+              text: msg,
+              footer: footer
+          });
+        }
+
+
+        let error = function(c){
+          const {
+            msg = "",
+            title = "",
+            footer = "",
+          } = c;
+            Swal.fire({
+              icon: "error",
+              title: title,
+              text: msg,
+              footer: footer
+          });
+        }
+
+        async function custom(c){
+          const {
+            msg = "",
+            title = "",
+          } = c;
+
+          const { value: formValues } = await Swal.fire({
+              title: title,
+              html: msg,
+              backdrop: false,
+              focusConfirm: false,
+              showCancelButton: true,
+              willOpen: () => {
+                const elem = document.getElementById('reservation-dates-model');
+                const rp = new DateRangePicker(elem, {
+                  format:"yyyy-mm-dd",
+                  showOnFocus: true,
+                });
+              },
+              preConfirm: () => {
+                return [
+                  document.getElementById("start").value,
+                  document.getElementById("end").value
+                ];
+              },
+              didOpen: () => {
+                document.getElementById("start").removeAttribute("disabled");
+                document.getElementById("end").removeAttribute("disabled");
+              }
+            });
+            if (formValues) {
+              Swal.fire(JSON.stringify(formValues));
+          }
+        }
+
+        return {
+          toast: toast,
+          success: success,
+          error: error,
+          custom: custom,
+        }
       }
 
     </script>
